results/SVCOMP/4-shot/log-assert2-2024_03_18_06_20_39.txt
import java.util.Random;

class assert2 {
    //@ ensures \result >= 0 && \result < 1000;
    public static void main() {
        int i = new Random().nextInt();

        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 0 && \result < 1000;
                 ^
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 0 && \result < 1000;
                                 ^
2 errors

